--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "jsmidgen": "^0.1.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
