--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "driver.js": "^1.4.0",
     "jsmidgen": "^0.1.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
